[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "Blockthon"
version = "1.3.6"
description = "Blockthon: Fast and easy generation of Private Keys and Mnemonics, converting Seed, Binary, and Decimal."
authors = ["Pymmdrza <Pymmdrza@gmail.com>"]
homepage = "https://github.com/Blockthon/Blockthon"
documentation = "https://blockthon.readthedocs.io"
readme = "README.md"
keywords = ['blockthon', 'bitcoin', 'ethereum', 'tron', 'dogecoin', 'dash', 'qtum', 'litecoin', 'bitcoingold', 'wallet', 'private key', 'mnemonic', 'seed', 'binary', 'hex', 'hunter', 'compress', 'un compress', 'compress address', 'un compress address']
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.6"
bit = "^0.8.0"
hdwallet = "^2.2.1"
requests = "^2.28.2"
requests-html = "^0.10.0"
ecdsa = "^0.18.0"
bip-utils = "^2.7.1"
bip32utils = "^0.3.post4"
pycryptodome = "^3.18.0"
pbkdf2 = "^1.3"
base58 = "^2.1.1"
